# synthesis-os

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-tauri.yml
.searxng/: settings.yml
apps/desktop/: debug-search.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: calendar.rs  mod.rs  scraper.rs  spacedock_native.rs  tauri_commands.rs
apps/desktop/src/components/a2ui-components/: A2UIAccordion.tsx  A2UIActionRow.tsx  A2UIAudioPlayer.tsx  A2UIBadgeSet.tsx  A2UICallout.tsx  A2UICanvas.tsx  A2UICarousel.tsx  A2UICodeBlock.tsx  A2UIDataGrid.tsx  A2UIDatePicker.tsx  A2UIImage.tsx  A2UIImageGallery.tsx  A2UIInput.tsx  A2UILinkPreview.tsx  A2UIList.tsx  A2UIMap.tsx  A2UIMarkdown.tsx  A2UIProgressBar.tsx  A2UISelect.tsx  A2UISeparator.tsx  A2UISkeleton.tsx  A2UISlider.tsx  A2UIStatsRow.tsx  A2UITable.tsx  A2UITabs.tsx  A2UIText.tsx  A2UITimeline.tsx  A2UIToggle.tsx  A2UIVideoPlayer.tsx  CardHeader.tsx  index.ts  types.ts
apps/desktop/src/components/synthesis-ui/: BootScreen.tsx  CardSkeleton.tsx  ChatPanel.tsx  CommandPalette.tsx  EdgeRenderer.tsx  ErrorBoundary.tsx  FileBrowserView.tsx  FirstRunSetupStep1.tsx  GenerativeZone.tsx  GlassCard.tsx  GlassContainer.tsx  HolographicHUD.tsx  HybridAgentCard.tsx  InputBar.tsx  JarvisButton.tsx  LoginView.tsx  MenuBar.tsx  NodeCard.tsx  NodeContainer.tsx  (+15 more)
apps/desktop/src/context/: AuthContext.tsx  ProfileContext.tsx  SettingsContext.tsx  SyncStateContext.tsx  SynthesisCardContext.tsx
apps/desktop/src/hooks/: useDebugLog.ts  useKeyboardShortcuts.ts  useLiquidGlass.ts  useNativeDock.ts  useSynthesis.ts  useSynthesisNodes.ts  useSynthesisNodesFromStore.ts  useSynthesisOsEvents.ts  useSystemStatus.ts  useUserSyncState.ts
apps/desktop/src/lib/: apiClient.ts  audio.ts  backgrounds.ts  browser.ts  cache.ts  confirmDialog.ts  export.ts  pinHash.ts  positioning.ts  schemas.ts  storage.ts  tauriBridge.ts  textWithLinks.tsx  themes.ts  utils.ts
apps/desktop/src/stores/: nodesStore.ts
apps/desktop/src/types/: settings.ts  synthesis.ts
crates/kernel/: Cargo.toml
crates/kernel/src/: agent.rs  agent_runtime.rs  approval_gate.rs  auth.rs  context.rs  events_broadcast.rs  http_server.rs  intent_cache.rs  lib.rs  local_embeddings.rs  manager.rs  memory.rs  memory_ext.rs  personas.rs  prompts.rs  scheduler.rs  scheduler_qos.rs  settings.rs  specialists.rs  status_labels.rs  storage.rs  syscall.rs  terminal.rs  tool_cache.rs  tool_rag.rs  tools.rs
crates/kernel/src/commands/: applescript.rs  desktop_takeover.rs  mod.rs  traits.rs
crates/kernel/src/commands/macos/: apps.rs  mod.rs  system.rs
crates/kernel/src/llm_core/: adapter.rs  backend.rs  mod.rs  types.rs
docs/: cross-device.md
scripts/: check-remote-access.sh  download-embedding-model.sh  download-wallpapers.mjs  setup-searxng.sh
(+59 files in other folders)
