[package]
name = "synthesis-os"
version = "0.1.0"
description = "SynthesisOS — AI-native desktop operating system"
authors = ["Gaston Gelhorn"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kernel = { path = "../../../crates/kernel" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full", "process", "rt"] }
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-liquid-glass = { git = "https://github.com/hkandala/tauri-plugin-liquid-glass", branch = "main" }
objc2-event-kit = { version = "0.3.2", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = ["std", "NSGeometry"] }
objc2 = "0.6.3"
objc2-core-graphics = { version = "0.3", features = ["objc2", "CGGeometry"] }
block2 = "0.6.2"
reqwest = { version = "0.13.2", features = ["rustls", "json", "blocking", "stream"] }
uuid = { version = "1.20.0", features = ["v4"] }
time = "0.3.41"
rcgen = { version = "0.14.7", features = ["pem"] }
get_if_addrs = "0.5.3"

[dev-dependencies]
tempfile = "3"
